--- a/views/base.pug
+++ b/views/base.pug
@@ -20,5 +20,5 @@ html
         include _footer 
 
         script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
-        script(type="module" src="/js/login.js")
+        script(type="module" src="/js/index.js")
 
