integration with stripe in test mode was implemented and my-tour view

--- a/views/base.pug
+++ b/views/base.pug
@@ -20,5 +20,6 @@ html
         include _footer 
 
         script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
+        script(src="https://js.stripe.com/v3/")
         script(type="module" src="/js/index.js")
 
