fixed some bugs and emails are sent in production env variable with mailGun

--- a/views/overview.pug
+++ b/views/overview.pug
@@ -39,7 +39,7 @@ block content
                             | 
                             span.card__footer-text per person
                         p.card__ratings
-                            span.card__footer-value= tour.ratingsAverage
+                            span.card__footer-value= tour.ratingsAverage.toFixed(1)
                             | 
                             span.card__footer-text= `rating (${tour.ratingsQuantity})`
                     .card__button        
